--- a/jardiquest/view/quests_list.html
+++ b/jardiquest/view/quests_list.html
@@ -37,8 +37,9 @@
 
                         
                             <p>
+                                Temps estimé :
                                 {% if hours > 0 %}
-                                    Temps estimé : {{ hours }}h
+                                     {{ hours }}h
                                 {% endif %}
                                 {{ minutes }}min
                             </p>
