results_number_and_design_improvements

--- a/jardiquest/static/css/view/garden.css
+++ b/jardiquest/static/css/view/garden.css
@@ -20,8 +20,13 @@
 
 .top{
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 4fr 1fr;
     font-size: large;
+}
+
+.find{
+    display: grid;
+    justify-items: center;
 }
 
 .right{
@@ -43,7 +48,7 @@
 .handler-display-data {
     display: grid;
     height: 100%;
-    grid-template-rows: 15% 85%;
+    grid-template-rows: max(15%,5em) 85%;
 }
 
 .table-all {
@@ -109,7 +114,7 @@
 
 a:link { text-decoration: none; }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 850px) {
     .handler-display-data {
         display: grid;
         height: 100%;
