--- a/jardiquest/view/garden.html
+++ b/jardiquest/view/garden.html
@@ -108,6 +108,7 @@
                     {% endfor %}
                 </tbody>
             </table>
+            <div class="find"><p>Résultats : {{displayed}}/{{total}}</p></div>
         </div> 
     </div>
 </div>
@@ -144,5 +145,8 @@
         window.location = link;
     }
     
+    function callNextPage(){
+
+    }
 </script>
 {% endblock %}
