Improvements for product sellings page

--- a/jardiquest/view/market.html
+++ b/jardiquest/view/market.html
@@ -4,6 +4,8 @@
 {% set active="market" %}
 {% include "_navbar.html" %}
 
+<link rel="stylesheet" href="{{ url_for('static', filename='css/view/market/market.css') }}">
+
 <div id="market">
     <div id="market_header">
         <p>Que voulez-vous acheter ?</p>
