Add of js to display the price according to the quantity + debug

--- a/jardiquest/view/_navbar.html
+++ b/jardiquest/view/_navbar.html
@@ -41,7 +41,7 @@
     {% endif %}
 
     {% if active == 'market' %}
-        <a href="{{url_for('controller.garden')}}" class="active">Marché</a>
+        <a href="{{url_for('controller.market')}}" class="active">Marché</a>
     {% else %}
         <a href="{{url_for('controller.market')}}">Marché</a>
     {% endif %}
