--- a/jardiquest/static/css/view/market/product.css
+++ b/jardiquest/static/css/view/market/product.css
@@ -44,19 +44,30 @@
 /* User Golds */
 
 #user_golds{
-    position : absolute;
-    top : 0;
+    position : fixed;
+    top : 8em;
     right : 2%; 
+    background-color: var(--background-secondary);
+    border-radius: 5px;
+    padding : 5px;
 }
 
 
 /* Sellings */
 
 #market_product_sellings_container{
-    margin-top : 20px;
+    margin : 20px 20px 3em 30px;
     display : flex;
     flex-direction: column;
     gap : 10px;
+}
+
+#sort_sellings{
+    margin-bottom : 5px;
+}
+
+#no_sellings_message{
+    margin-left : 3%;
 }
 
 .market_product_selling{
@@ -77,6 +88,7 @@
     grid-row: 1;
     grid-column: 1;
     margin-left: 5px;
+    color : var(--green);
 }
 
 .price_txt{
@@ -84,12 +96,19 @@
     grid-column : 1;
     grid-row : 2;
     margin-left: 5px;
+    color : var(--brown-orange);
+}
+
+.price{
+    color : inherit;
 }
 
 .selling_date{
     border-right: 1px solid black;
     grid-row : 1/3;
     grid-column : 2;
+    font-style: italic;
+    color : grey;
 }
 
 .buy_form{
@@ -102,6 +121,8 @@
 
 .buy_quantity_label{
     grid-row : 1;
+    color : var(--grey);
+    font-style: italic;
 }
 
 .buy_quantity{
@@ -113,7 +134,12 @@
 
 .cost{
     grid-column : 1;
-    grid-row : 2;   
+    grid-row : 2; 
+    color : black;  
+}
+
+.cost_float{
+    color : inherit;
 }
 
 .buy_button{
@@ -121,6 +147,9 @@
     grid-row : 2;
     width : 50%;
     text-align: center;
+    color : var(--brown-orange);  
 }
 
 
+.modal-open{overflow:hidden}.modal{position:fixed;top:0;right:0;bottom:0;left:0;z-index:1050;display:none;overflow:hidden;-webkit-overflow-scrolling:touch;outline:0}.modal.fade .modal-dialog{-webkit-transform:translate(0,-25%);-ms-transform:translate(0,-25%);-o-transform:translate(0,-25%);transform:translate(0,-25%);-webkit-transition:-webkit-transform .3s ease-out;-o-transition:-o-transform .3s ease-out;transition:-webkit-transform .3s ease-out;transition:transform .3s ease-out;transition:transform .3s ease-out,-webkit-transform .3s ease-out,-o-transform .3s ease-out}.modal.in .modal-dialog{-webkit-transform:translate(0,0);-ms-transform:translate(0,0);-o-transform:translate(0,0);transform:translate(0,0)}.modal-open .modal{overflow-x:hidden;overflow-y:auto}.modal-dialog{position:relative;width:auto;margin:10px}.modal-content{position:relative;background-color:#fff;background-clip:padding-box;border:1px solid #999;border:1px solid rgba(0,0,0,.2);border-radius:6px;-webkit-box-shadow:0 3px 9px rgba(0,0,0,.5);box-shadow:0 3px 9px rgba(0,0,0,.5);outline:0}.modal-backdrop{position:fixed;top:0;right:0;bottom:0;left:0;z-index:1040;background-color:#000}.modal-backdrop.fade{filter:alpha(opacity=0);opacity:0}.modal-backdrop.in{filter:alpha(opacity=50);opacity:.5}.modal-header{padding:15px;border-bottom:1px solid #e5e5e5}.modal-header .close{margin-top:-2px}.modal-title{margin:0;line-height:1.42857143}.modal-body{position:relative;padding:15px}.modal-footer{padding:15px;text-align:right;border-top:1px solid #e5e5e5}.modal-footer .btn+.btn{margin-bottom:0;margin-left:5px}.modal-footer .btn-group .btn+.btn{margin-left:-1px}.modal-footer .btn-block+.btn-block{margin-left:0}.modal-scrollbar-measure{position:absolute;top:-9999px;width:50px;height:50px;overflow:scroll}@media (min-width:768px){.modal-dialog{width:600px;margin:30px auto}.modal-content{-webkit-box-shadow:0 5px 15px rgba(0,0,0,.5);box-shadow:0 5px 15px rgba(0,0,0,.5)}.modal-sm{width:300px}}@media (min-width:992px){.modal-lg{width:900px}}
+.modal-footer:after,.modal-footer:before,.modal-header:after,.modal-header:before,.nav:after,.nav:before,.navbar-collapse:after,.navbar-collapse:before,.navbar-header:after,.navbar-header:before,.navbar:after,.navbar:before,.pager:after,.pager:before,.panel-body:after,.panel-body:before,.row:after,.row:before{display:table;content:" "}.btn-group-vertical>.btn-group:after,.btn-toolbar:after,.clearfix:after,.container-fluid:after,.container:after,.dl-horizontal dd:after,.form-horizontal .form-group:after,.modal-footer:after,.modal-header:after,.nav:after,.navbar-collapse:after,.navbar-header:after,.navbar:after,.pager:after,.panel-body:after,.row:after{clear:both}
