--- a/jardiquest/view/market_product.html
+++ b/jardiquest/view/market_product.html
@@ -46,13 +46,13 @@
     
             {% for selling in sellings %}
                 <div class="market_product_selling">
-                    <span class="quantity"><span class="quantity_float">{{ "%.2f" % selling.quantity }}</span>kg disponible</span>
+                    <span class="quantity"><span class="quantity_float">{{ selling.quantity }}</span>kg disponible</span>
                     <span class="price_txt"><span class="price">{{ selling.cost }}</span> {{ garden.moneyName }}/kg</span>
                     <span class="selling_date">Date de dépôt : <span class="date">{{ selling.date }}</span></span>
                     <form action="{{ url_for('controller.market_buy', product= product.name ) }}" method="post" class="buy_form">
                         <label for="buy_quantity" class="buy_quantity_label">Quantité voulue en kg :</label>
                         <input type="hidden" name="selling_id" value="{{ selling.idRecolte }}">
-                        <input type="number" name="buy_quantity" class="buy_quantity" step="0.05" min="0.05" max="{{ '%.2f' % selling.quantity }}" value="{{ '%.2f' % selling.quantity }}">
+                        <input type="number" name="buy_quantity" class="buy_quantity" step="0.05" min="0.05" max="{{ selling.quantity }}" value="{{ '%.2f' % selling.quantity }}">
                         <p class="cost">Coût : <span class="cost_float">{{ "%.2f" % (selling.quantity * selling.cost) }}</span> {{ garden.moneyName }}</p>
                         <input type="submit" class="buy_button" value="Acheter">
                     </form>
