--- a/jardiquest/view/garden.html
+++ b/jardiquest/view/garden.html
@@ -78,34 +78,6 @@
                 <input class="input" type="text" name="filtreAdresse" placeholder="Adresse"></input>
                 <button class="button" type="submit">Search</button>
             </form>
-            <!-- <table class="table-all">
-                <thead>
-                    <tr>
-                        <th>Nom du jardin</th>
-                        <th>Description</th>
-                        <th>Monnaie</th>
-                        <th>Ville</th>
-                        <th>Adresse</th>
-                        {% if user.role == 'Participant' %}
-                            <th>Choisir</th>
-                        {% endif %}
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for jardin in jardins %}
-                    <tr>
-                        <th>{{jardin.name}}</th>
-                        <th>{{jardin.description}}</th>
-                        <th>{{jardin.moneyName}}</th>
-                        <th>{{jardin.ville}}</th>
-                        <th>{{jardin.adresse}}</th>
-                        {% if user.role == 'Participant' %}
-                            <th><button type="button" onclick='changeId("{{jardin.idJardin}}")' data-toggle="modal" data-target="#myModal">Choisir</button></th>
-                        {% endif %}
-                    </tr>
-                    {% endfor %}
-                </tbody>
-            </table> -->
             <table id="table" class="table-all">
                 <thead>
                     <tr>
@@ -147,9 +119,10 @@
     </div>        
 </div>
 <script>
-    var init = 0
+    var init = -10
     var counts = JSON.parse('{{jsTable|tojson|safe}}')
     const sizeCounts = '{{total}}'
+    const role = '{{user.role}}'
     numberItems = 10
     nextPage()
 
@@ -171,26 +144,29 @@
     
     // next page is used to display the nexts rows in the table
     function nextPage(){
-        emptyTable()
-        elt = document.getElementById('body')
-        liste = counts.slice(init,init + numberItems)
-        changeResultat(init+numberItems)
-        liste.forEach(
-            element => addRow(element,elt)
-            );
-        init = init + numberItems
+        if(init+numberItems<sizeCounts){
+            init = init + numberItems
+            emptyTable()
+            elt = document.getElementById('body')
+            liste = counts.slice(init,init + numberItems)
+            changeResultat(init+numberItems)
+            liste.forEach(
+                element => addRow(element,elt)
+                );
+        }
     }
 
     function previousPage(){
-        emptyTable()
-        elt = document.getElementById('body')
-        listePrev = counts.slice(init-numberItems,init)
-        console.log(liste)
-        changeResultat(init-numberItems)
-        listePrev.forEach(
-            element => addRow(element,elt)
-            );
-        init = init - numberItems
+        if(init-numberItems>=0){
+            emptyTable()
+            elt = document.getElementById('body')
+            listePrev = counts.slice(init-numberItems,init)
+            changeResultat(init)
+            listePrev.forEach(
+                element => addRow(element,elt)
+                );
+            init = init-numberItems
+        }
     }
 
     function chooseButton(row){
@@ -206,16 +182,24 @@
     // use to insert a row in the table
     function addRow(row,elt) {
 
-        if(!row[5].includes('button type="button" onclick=')){
-            choose = chooseButton(row)
-            row.pop()
-            row.push(choose)
+        if(role=='Participant'){
+            if(!row[5].includes('button type="button"')){
+                choose = chooseButton(row)
+                row.pop()
+                row.push(choose)
+            }
+        }else{
+            row = row.slice(0,5)
         }
-    
+
         var ligne = elt.insertRow(-1);
+
         row.forEach(
-            element => ligne.insertCell(-1).innerHTML = element
+            element => ligne.insertCell(-1).innerHTML = element,
             );
+
+        var table = document.getElementById('body');
+        table.setAttribute("class", "cells");
     }
 </script>
 {% endblock %}
