Filters and sort

--- a/jardiquest/view/market.html
+++ b/jardiquest/view/market.html
@@ -14,22 +14,22 @@
     <div id="market_filters">
         <div id="market_search_by_name">
             <p>Nom : </p>
-            <input type="text" id="research_bar" placeholder="Rechercher un article">         
+            <input type="text" id="research_bar" class="research_bar" placeholder="Rechercher un article">         
         </div>
 
         <div id="market_filters_type">
             <p>Type : </p>
-            <select name="type" id="type">
+            <select name="filter_type" id="filter_type">
                 <option value="all">Tous</option>
                 <option value="fruit">Fruit</option>
-                <option value="legume">Légume</option>
-                <option value="plante">Plante aromatique</option>
+                <option value="légume">Légume</option>
+                <option value="plante aromatique">Plante aromatique</option>
             </select>   
         </div>
 
         <div id="market_sort">
             <p>Trier par :</p>
-            <select name="sort" id="sort">
+            <select name="sort_products" id="sort_products">
                 <option value="name">Nom</option>
                 <option value="price">Prix</option>
                 <option value="type">Type</option>
@@ -50,19 +50,19 @@
         <div class="product searching_items" style="cursor: pointer;" onclick="window.location='{{url}}';">
             <img src="{{ url_for('static', filename='image/vegetables/' + produit.imagePath) }}" alt="{{ produit.name }}" class="product_img">
             <div class="product_type">
-                {{ produit.type }}
+                <p class="type">{{ produit.type }}</p>
             </div>
 
             <div class="product_name searching_property">
-                <p>{{ produit.name }}</a>
+                <p class="name">{{ produit.name }}</a>
             </div>
             
             <div class="product_quantity">
-                <p>{{ "%.2f" % produit.quantity }} kg disponibles</p>
+                <p><span class="quantity_float">{{ "%.2f" % produit.quantity }}</span> kg disponibles</p>
             </div>
 
             <div class="product_cheaper_price">
-                <p>Le moins cher : {{ "%.2f" % produit.cheaper_price }} {{ garden.moneyName }}/kg</p>
+                <p>Le moins cher : <span class="price">{{ "%.2f" % produit.cheaper_price }}</span> {{ garden.moneyName }}/kg</p>
             </div>
 
         </div>
@@ -73,5 +73,6 @@
 
 </div>
 
+<script src="{{ url_for('static', filename='js/market.js') }}"></script>
 <script src="{{ url_for('static', filename='js/research_bar.js') }}"></script>
 {% endblock %}
