--- a/jardiquest/static/css/view/market/orders.css
+++ b/jardiquest/static/css/view/market/orders.css
@@ -5,6 +5,11 @@
     gap : 10px;
 }
 
+#orders_top{
+    font-size: 1.2em;
+    margin-left : 3em;
+    margin-bottom: 10px;
+}
 
 #orders_filters {
     margin-left : 4em;
@@ -44,4 +49,80 @@
 
 #orders_filters{
     display : flex;
+}
+
+
+#no_orders{
+    margin-left : 5em;
+}
+
+
+#orders{
+    margin : 20px 20px 3em 30px;
+    display : flex;
+    flex-direction: column;
+    gap : 10px;
+}
+
+.order{
+    display : grid;
+    column-gap: 8px;
+    border : 1px solid black;
+    border-radius : 5px;
+    box-shadow: 1px 1px 1px black;
+    align-self: center;
+    min-height: 50px;
+    padding : 3px;
+    width : 90%;
+    background-color: #F7F7F7;
+    grid-template-columns: 2fr 1fr 1fr 1fr;
+}
+
+
+.email{
+    grid-row: 1;
+    grid-column: 1; 
+    color : grey;
+    font-size : 0.8em;
+    font-style: italic;
+}
+
+.username{
+    grid-row: 2;
+    grid-column: 1; 
+    color : black;
+}
+
+
+.product{
+    grid-row: 1;
+    grid-column: 2;
+    color : var(--green);
+}
+
+.date_achat p, .date,.date p, .price p, .quantity p,.product p, .username p, .email p  {
+    color : inherit;
+}
+
+.quantity{
+    grid-row: 2;
+    grid-column: 2; 
+    color : var(--brown-orange);
+}
+
+.price{
+    grid-row: 1;
+    grid-column: 3; 
+}
+
+.date_achat{
+    grid-row: 2;
+    grid-column: 3; 
+    font-size : 0.8em;
+    color : grey;
+}
+
+.complete_order_container{
+    grid-row: 1/3;
+    grid-column: 4;
 }
