--- a/jardiquest/view/orders.html
+++ b/jardiquest/view/orders.html
@@ -6,10 +6,14 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='css/view/market/orders.css') }}">
 
 <div id="orders_container">
+    <div id="market_top">
+        <p>Ce que les participants à votre jardin ont achetés :</p>
+    </div>
+
     <div id="orders_filters">
         <div id="orders_search_by_username">
-            <p>Nom : </p>
-            <input type="text" id="research_bar" class="research_bar" placeholder="Rechercher un utilisateur">         
+            <p>Nom d'utilisateur : </p>
+            <input type="text" id="research_bar" class="research_bar" >         
         </div>
     
         <div id="orders_sort">
@@ -21,15 +25,26 @@
         </div>
     </div>
     
+    {% if orders|length == 0 %}
+        <div id="no_orders">
+            <p>Aucun achat n'a été effectué.</p>
+        </div>
+    {% endif %}
     <div id="orders">
         {% for order in orders %}
             <div class="order searching_items">
                 <div class="email"><p>{{ order.email }}</p></div> 
                 <div class="username searching_property"><p>{{ order.username }}</p></div>
                 <div class="product"><p>{{ order.productName }}</p></div>
-                <div class="quantity"><p>{{ order.quantite }}</p></div>
-                <div class="price"><p>{{ order.cout }}</p></div>
-                <div class="date"><p>{{ order.dateAchat }}</p></div>
+                <div class="quantity"><p>{{ "%.2f" % order.quantite }} kg</p></div>
+                <div class="price"><p>Prix : {{ "%.2f" % order.cout }} {{ garden.moneyName}}</p></div>
+                <div class="date_achat"><p>Date d&#39;achat : <span class="date">{{ order.dateAchat }}</span></p></div>
+                <div class="complete_order_container">
+                    <form method="post" action="TODO">
+                        <input type="hidden" name="id" value="{{ order.id }}">
+                        <input type="submit" value="Finaliser la commande" class="complete_order">
+                    </form>
+                </div>
             </div>
         {% endfor %}
     </div>
