Error message if the user is on a page that requires to have a garden

--- a/jardiquest/view/market_product.html
+++ b/jardiquest/view/market_product.html
@@ -5,17 +5,17 @@
 {% include "_navbar.html" %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/view/market/product.css') }}">
 
-
-{% with messages = get_flashed_messages() %}
-  {% if messages %}
-    <ul class=flashes>
-    {% for message in messages %}
-      <li>{{ message }}</li>
-    {% endfor %}
-    </ul>
-  {% endif %}
+{% with messages = get_flashed_messages(category_filter=["error"]) %}
+    {% if messages %}
+    <div id="flash_messages">
+        <p id="category_message" hidden>Erreur</p>
+        <p id="flash_message" hidden>{{ messages[0] }}</p>
+        <div id="flash_message_buttons" hidden>
+            <button type="button" class="btn btn-default" data-dismiss="modal">Ok</button>
+        </div>
+    </div>
+    {% endif %}
 {% endwith %}
-
 
 <div id="market_product">
     <div id="market_product_presentation">
@@ -62,6 +62,8 @@
     </div>
 </div>
 
-
+<script src="{{ url_for('static', filename='js/flash_messages_modal.js') }}"></script>
 <script src="{{ url_for('static', filename='js/market_product.js') }}"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 {% endblock %}
